Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25422

Some delete mutations with xattrs not being indexed

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      Sync Gateway recently completed uptake of a kv-engine enhancement to support delete of document body and xattr update in a single multi-part subdoc operation. Previously we were limited to a two-operation process - deleting the document in the first op, then updating the xattr in a second op.

      After uptaking this change, delete mutations that delete the body and update the xattr don't appear to be indexed by the view-engine - view results omit those doc ids.

      Two-part deletes are still appearing in the view, so I'm confident that we're properly setting the flag to index xattrs/tombstones on the design doc.

      I compared the DCP mutations for the two cases to try to identify the difference in the delete mutations for the two cases. The main difference I see is in the Data Type. The single operation results in a DCP delete mutation with Data Type 0x05 (JSON + XATTR), while the two-part operations results in a DCP delete mutation with Data Type 0x04 (XATTR).

      I'll attached packet captures for the two DCP mutations in case that's useful.

      Attachments

        Issue Links

          Activity

            People

              adamf Adam Fraser
              adamf Adam Fraser
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty