MB-25422: Remove json datatype on body delete

This patch removes the json & snappy datatypes when the body is
deleted during a subdoc multi mutation body deletion. This is
because an empty document cannot be compressed or be json.

Change-Id: I5ca42fdd457e2e654cfb0f2040ba4461a8ea8035
Reviewed-on: http://review.couchbase.org/81427
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>